tests/Semantic/test_2_r08.out
Error type 8 at Line 21: incompatiable return type
