tests/Semantic/test_2_r08.spl
int compare1(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
float compare2(int a, int b)
{
  if (b > a) {return -1.0;}
  if (b == a) {return 0.0;}
  return 1.0;
}
int test_2_r08(int i, int m, int n)
{
  if (i == 0)
  {
    return compare1(m, n);
  }
  else
  {
    return compare2(m, n);
  }
}
